--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <i class="fa-solid fa-car"></i>
+    <h1>Hello world</h1>
     <!--Script-->
     <script src="script.js"></script>
 </body>
